--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    @apply h-full;
+}
+body {
+    @apply h-full;
+}
+div#__nuxt {
+    @apply h-full;
+    display: flex;
+    flex-direction: column;
+    > * {
+        flex: 1;
+    }
+}
